NOJIRA fikset validering test feil